estudando comandos, comentarios, variaveis e data types

--- a/aula-04/ex001.html
+++ b/aula-04/ex001.html
@@ -4,8 +4,33 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Primeiro Script</title>
+    <style>
+        * {
+            margin: 0px;
+            padding: 0px;
+        }
+
+        body {
+            font-family: Arial, Helvetica, sans-serif;
+            padding: 10px;
+            background-color: rebeccapurple;
+            color: white;
+        }
+
+        h1 {
+            margin-bottom: 5px;
+            color: yellow;
+        }
+    </style>
 </head>
 <body>
-    
+    <h1>Hello, World!</h1>
+    <p>Primeiro Script</p>
+
+    <script>
+        window.alert('Hello, World!') // print
+        window.confirm('Está gostando de JavaScript?') // janela com botão ok e cancel
+        window.prompt('Qual é seu nome?') // pergunta o nome
+    </script>
 </body>
 </html>
