--- a/curso/aula-12-ex/modelo.html
+++ b/curso/aula-12-ex/modelo.html
@@ -3,21 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Modelo de Exercício</title>
+    <title>Hora do Dia</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body onload="carregar()">
     <header>
-        <h1>Título</h1>
+        <h1>Hora do Dia</h1>
     </header>
 
     <main>
-        <section>
-            <p>oi</p>
+        <section id="hora">
+
         </section>
 
-        <section>
+        <section id="foto">
+            <img id="img" src="imagens/manha.jpg" alt="Foto do Dia">
+        </section>
 
+        <section id="msg">
+            
         </section>
     </main>
 
