--- a/curso/tabuada/index.html
+++ b/curso/tabuada/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tabuada</title>
-    <link rel="stylesheet" href="style.css ">
 </head>
 <body>
     <header>
@@ -13,8 +12,8 @@
 
     <main>
         <section>
-            <label for="num">Digite um número para verificar a tabuada: </label>
-            <input type="number" name="num" id="num">
+            <label for="num">Número: </label>
+            <input type="number" name="num" id="txt-n">
             <input type="button" value="Gerar Tabuada" onclick="tabuada()">
         </section>
 
@@ -23,9 +22,7 @@
     </main>
 
     <footer>
-        <p>&copy; Luiz Guilherme Brito Esperança, 2025</p>
+        <p>&copy; Site desenvolvido por <a href="#">Luiz Guilherme Brito Esperança em 2025</a></p>
     </footer>
-
-    <script src="script.js"></script>
 </body>
 </html>
