--- a/curso/tabuada/index.html
+++ b/curso/tabuada/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tabuada</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
@@ -22,7 +23,9 @@
     </main>
 
     <footer>
-        <p>&copy; Site desenvolvido por <a href="#">Luiz Guilherme Brito Esperança em 2025</a></p>
+        <p>&copy; Site desenvolvido por <a href="https://www.linkedin.com/in/luizgbritoe" target="_blank" rel="external">Luiz Guilherme Brito Esperança</a> em 2025</p>
     </footer>
+
+    <script src="script.js"></script>
 </body>
 </html>
