--- a/curso/aula-16-ex/ex-018/modelo.html
+++ b/curso/aula-16-ex/ex-018/modelo.html
@@ -3,21 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Modelo de Exercício</title>
+    <title>Analisador de Números</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body onload="carregar()">
+<body>
     <header>
-        <h1>Título</h1>
+        <h1>Analisador de Números</h1>
     </header>
 
     <main>
         <section>
+            <label for="num">Digite um número entre 1 e 100: </label>
+            <input type="number" name="num" id="txt-n">
+            <input type="button" value="Adicionar" onclick="analisar()">
 
+            <br><br>
+
+            <select name="lista" id="lista" size="6">
+
+            </select>
+
+            <input type="button" value="Finalizar" onclick="finalizar()">
         </section>
 
-        <section>
-
+        <section id="resultado">
+            
         </section>
     </main>
 
