--- a/curso/aula-16-ex/ex-018/modelo.html
+++ b/curso/aula-16-ex/ex-018/modelo.html
@@ -15,13 +15,15 @@
         <section>
             <label for="num">Digite um número entre 1 e 100: </label>
             <input type="number" name="num" id="txt-n">
-            <input type="button" value="Adicionar" onclick="analisar()">
+            <input type="button" value="Adicionar" onclick="adicionar()">
 
             <br><br>
 
             <select name="lista" id="lista" size="6">
 
             </select>
+
+            <br><br>
 
             <input type="button" value="Finalizar" onclick="finalizar()">
         </section>
